--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@ngrx/store": "^8.5.2",
+    "@ngrx/store-devtools": "^8.5.2",
     "rxjs": "~6.4.0",
     "todomvc-app-css": "^2.3.0",
     "tslib": "^1.9.0",
